# dictionary_learning

./: .gitignore  README.md  pyproject.toml
dictionary_learning/: activault_s3_buffer.py  config_defaults.py  dictionary.py  interp.py  training.py  utils.py
dictionary_learning/trainers/: splinterp copy.py  splinterp.py  temporal.py
notebooks/: interp-llama3.ipynb
scripts/: run_precompute_tmux.sh  run_training_tmux.sh
trainers/: gated_anneal.py  gated_new.py  gdm.py  group.py  jump.py  lista.py  p_anneal.py  p_anneal2.py  p_anneal_new.py  standard.py  standard_new.py
training_demo/: README.md  config.py  evaluate.py  precompute_activations.py  run_training.py
training_demo/dev/: nnsight_basic_intervention.py  testing.py
