[project]
name = "dictionary-learning"
version = "0.1.0"
description = "Dictionary learning via sparse autoencoders on neural network activations"
authors = [
    { name = "Samuel Marks" },
    { name = "Adam Karvonen" },
    { name = "Aaron Mueller" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "deep-learning",
    "sparse-autoencoders",
    "mechanistic-interpretability",
    "PyTorch",
]
classifiers = ["Topic :: Scientific/Engineering :: Artificial Intelligence"]
dependencies = [
    "datasets>=2.18.0",
    "einops>=0.7.0",
    "nnsight>=0.5.2",
    "pandas>=2.2.1",
    "plotly>=5.18.0",
    "tqdm>=4.66.1",
    "zstandard>=0.22.0",
    "wandb>=0.12.0",
    "umap-learn>=0.5.6",
    "llvmlite>=0.40.0",
    "boto3",
    "matplotlib>=3.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://github.com/saprmarks/dictionary_learning"
Repository = "https://github.com/saprmarks/dictionary_learning"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dictionary_learning", "training_demo"]

[tool.semantic_release]
version_variables = ["dictionary_learning/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv build"
